--- a/style.css
+++ b/style.css
@@ -1,9 +1,58 @@
 body{
    margin: 0;
    padding: 0;
+   height: 100vh;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
-.conatainer{
+.container{
    height: 100px;
    width: 200px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-color: blue;
+   height: 100px;
+   width: 200px;
+   border-radius: 50rem;
+   box-shadow: 4px 4px 20px black;
+   position: relative;
+   overflow: hidden;
 }
+
+
+p{
+   position: absolute;
+   background:linear-gradient(red,orange);
+   height: 60px;
+   width: 100%;
+   z-index: 2; 
+   animation: rotate;
+   animation-duration: 3s;
+   animation-timing-function: linear;
+   animation-iteration-count: infinite;
+   z-index: 1;
+}
+
+@keyframes rotate{
+   0%{
+      transform: rotate(0deg)
+   }
+   100%{
+      transform: rotate(360deg)
+   }
+}
+
+button{
+   height: 90px;
+   width: 190px;
+   z-index: 2;
+   border-radius: 50rem;
+   background-color: blue;
+   border: none;
+   color: white;
+   font-size: x-large;
+}
+
